[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 80.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeft" type="Button" parent="."]
margin_left = 20.0
margin_top = 90.0
margin_right = 90.0
margin_bottom = 110.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="."]
margin_left = 110.0
margin_top = 90.0
margin_right = 180.0
margin_bottom = 110.0
mouse_filter = 2
disabled = true
button_mask = 0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="ButtonRight" to="." method="_on_ButtonRight_pressed"]
